# KryonV2

./: .gitignore  AUDIT_REPORT.md  FINAL_AUDIT_REPORT.md  MainnetImpAudit.md  README.md
kryon-protocol/: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
kryon-protocol/.github/workflows/: ci.yml
kryon-protocol/contracts/perp-engine/: Cargo.toml
kryon-protocol/contracts/perp-engine/src/: lib.rs
kryon-protocol/contracts/perp-engine/test_snapshots/tests/: charge_trade_fee_cannot_push_account_below_initial_margin.1.json  charge_trade_fee_debits_user_and_credits_recipient.1.json  close_realizes_profit_to_vault_balance.1.json  funding_update_is_settled_before_close.1.json  isolated_margin_does_not_contaminate_cross_health.1.json  isolated_position_sets_margin_on_open.1.json  open_position_enforces_per_user_cap.1.json  opens_position_and_syncs_vault_health.1.json  rejects_direct_position_mutation_without_order_gateway.1.json  rejects_execution_outside_oracle_band.1.json  rejects_open_that_breaks_initial_margin.1.json
kryon-protocol/contracts/perp-governance/: Cargo.toml
kryon-protocol/contracts/perp-governance/src/: lib.rs
kryon-protocol/contracts/perp-governance/test_snapshots/tests/: guardian_can_pause.1.json  guardian_pause_vetoes_execution.1.json  queues_and_executes_after_delay.1.json  queues_and_executes_after_delay_invoking_target.1.json  rejects_short_timelock_eta.1.json
kryon-protocol/contracts/perp-insurance/: Cargo.toml
kryon-protocol/contracts/perp-insurance/src/: lib.rs
kryon-protocol/contracts/perp-liquidation/: Cargo.toml
kryon-protocol/contracts/perp-liquidation/src/: lib.rs
kryon-protocol/contracts/perp-liquidation/test_snapshots/tests/: bad_debt_exceeding_fund_is_partially_covered_and_recorded.1.json  bad_debt_fully_covered_by_insurance_restores_zero_balance.1.json  cannot_liquidate_healthy_account.1.json  liquidates_unhealthy_account_and_pays_reward.1.json
kryon-protocol/contracts/perp-oracle-adapter/: Cargo.toml
kryon-protocol/contracts/perp-oracle-adapter/src/: lib.rs
kryon-protocol/contracts/perp-oracle-adapter/test_snapshots/tests/: get_price_rejects_stale_single_source_snapshot_after_quorum_upgrade.1.json  quorum_price_uses_median_and_max_confidence.1.json  quorum_rejects_duplicate_source.1.json  quorum_rejects_even_or_two_source_configuration.1.json  quorum_rejects_replayed_publish_time.1.json  rejects_unauthorized_publisher.1.json  single_source_rejects_replayed_publish_time.1.json
kryon-protocol/contracts/perp-order-gateway/: Cargo.toml
kryon-protocol/contracts/perp-order-gateway/src/: lib.rs
kryon-protocol/contracts/perp-order-gateway/test_snapshots/tests/: cancelled_order_cannot_fill.1.json  guardian_can_pause_gateway_but_not_unpause.1.json  matched_fill_charges_maker_and_taker_fees.1.json  matched_fill_opens_both_sides_and_tracks_fills.1.json  paused_gateway_rejects_settle_fill.1.json  reclaim_prunes_only_expired_entries.1.json  rejects_overfill_replay.1.json  settle_fill_signed_accepts_valid_order_signatures.1.json  settle_fill_signed_rejects_tampered_order.1.json  settle_fill_signed_rejects_unregistered_signer.1.json  settle_fill_signed_verifies_real_wallet_signature.1.json
kryon-protocol/contracts/perp-risk/: Cargo.toml
kryon-protocol/contracts/perp-risk/src/: lib.rs
kryon-protocol/contracts/perp-vault/: Cargo.toml
kryon-protocol/contracts/perp-vault/src/: lib.rs
kryon-protocol/contracts/perp-vault/test_snapshots/tests/: deposit_cap_blocks_over_cap_and_withdraw_frees_headroom.1.json  deposit_increases_internal_balance_after_token_transfer.1.json  multi_collateral_health_includes_all_assets.1.json  (+6 more)
kryon-protocol/crates/order-types/: Cargo.toml
kryon-protocol/crates/order-types/src/: lib.rs
kryon-protocol/crates/protocol-core/: Cargo.toml
kryon-protocol/crates/protocol-core/src/: accounting.rs  error.rs  fixed.rs  lib.rs  oracle.rs  types.rs
kryon-protocol/crates/risk-engine/: Cargo.toml
kryon-protocol/crates/risk-engine/src/: funding.rs  lib.rs  liquidation.rs  margin.rs
kryon-protocol/docs/: architecture.md  legacy-issues-fixed.md  security-model.md
kryon-protocol/e2e/: README.md  db-smoke.mjs  env.mjs  run-all.mjs  testnet-preflight.mjs
kryon-protocol/infra/audit/: build-audit-package.sh
kryon-protocol/infra/budget/: simulate-soroban-budgets.sh  soroban-footprint-baseline.toml
kryon-protocol/infra/deploy/: README.md  mainnet-deployment.json  manifest.example.toml  optimize-wasm.py  role-transfer.sh  testnet-deployment.toml
kryon-protocol/infra/deploy/environments/: mainnet.toml  testnet.toml
kryon-protocol/infra/deploy/runbooks/: governance-admin-transfer.md  incident.md  mainnet-readiness.md  matcher-failure.md  oracle-failure.md  rollback.md  settlement-stuck.md
kryon-protocol/infra/monitoring/: README.md
kryon-protocol/infra/rpc/: stellar-rpc.md
kryon-protocol/infra/signers/: README.md
kryon-protocol/prisma/: README.md  schema.prisma
kryon-protocol/prisma/migrations/20260528000100_init/: migration.sql
kryon-protocol/prisma/migrations/20260529130000_leaderboard_portfolio/: migration.sql
kryon-protocol/prisma/migrations/20260705120000_add_order_signature/: migration.sql
kryon-protocol/services/indexer-api/: Cargo.toml
kryon-protocol/services/indexer-api/src/: lib.rs
kryon-protocol/services/keepers/: Cargo.toml
kryon-protocol/services/keepers/src/: lib.rs
kryon-protocol/services/matcher/: Cargo.toml
kryon-protocol/services/matcher/src/: lib.rs
kryon-protocol/services/monitoring/: Cargo.toml
kryon-protocol/services/monitoring/src/: lib.rs
kryon-protocol/services/node-runtime/: Cargo.toml
kryon-protocol/services/node-runtime/src/: lib.rs
kryon-protocol/services/oracle-keeper/: Cargo.toml
kryon-protocol/services/oracle-keeper/src/: lib.rs
kryon-protocol/testing/fuzz/: README.md
kryon-protocol/testing/hardening/: Cargo.toml
kryon-protocol/testing/hardening/src/: lib.rs
kryon-protocol/testing/invariants/: README.md
kryon-protocol/testing/load-chaos/: Cargo.toml
kryon-protocol/testing/load-chaos/src/: lib.rs
(+212 files in other folders)
