[package]
name = "perp-engine"
description = "Soroban position and settlement engine for the redesigned perp protocol."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
protocol-core = { workspace = true }
risk-engine = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
perp-oracle-adapter = { workspace = true }
perp-vault = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
