[package]
name = "perp-order-gateway"
description = "Soroban signed-order settlement gateway for matched perp fills."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
protocol-core = { workspace = true }
# hazmat-address exposes Address::to_payload(), used by settle_fill_signed to
# extract the owner account's ed25519 public key for on-chain signature
# verification. Safe here: we verify the holder of the G-address master key
# signed the order, which is exactly what the wallet's signMessage produces.
soroban-sdk = { workspace = true, features = ["hazmat-address"] }

[dev-dependencies]
perp-engine = { workspace = true }
perp-oracle-adapter = { workspace = true }
perp-vault = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
# Real-crypto test vectors: sign canonical order messages exactly as a wallet
# would, then assert the on-chain ed25519 verification accepts them.
ed25519-dalek = { version = "2.2.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
