[package]
name = "risk-engine"
description = "Pure account-risk, margin, funding, and liquidation engine."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
protocol-core = { workspace = true }
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
